src/test/deca/context/invalid/personalTests/FieldNoClass2.deca
class A{
    int a;
}

{
    A a;
    a = new A();
    a.b;
}